welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:7: error: ';' expected but 'else' found.
    else {
    ^arrayFront9:12: error: Unmatched closing brace '}' ignored here
 }
 ^